k2s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-sample-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dockerSampleLabel
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: docker-sample
      labels:
        app: dockerSampleLabel
    spec:
      containers:
        - name: docker-sample
          image: docker.io/ifominykh/docker-sample:1.0.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 3
