k2s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-sample-svc
spec:
  selector:
    app: dockerSampleLabel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
